# cheng-lang

./:   --emit:obj  --version  .gitignore  .session-handoff.md  CLAUDE.md  HANDOFF.md  LICENSE  README.md  a.out  backend_driver_proof.cheng  backend_driver_uir_min_exports.cheng  cheng-package.toml  cheng.lock.toml  compile  findings.md  lessons.md  progress.md  task_plan.md  verify.sh  verify_asm.sh  wasm  ~
bootstrap/: README.md  cheng_cold  cheng_cold.c  cheng_seed.c  cheng_seed.c.modified  coff_direct.h  cold_csg_v2_format.h  cold_parser.c  cold_parser.h  cold_types.h  compiler_bootstrap_manifest.cheng  driver_bootstrap_contract.cheng  driver_bootstrap_manifest.cheng  elf64_direct.h  macho_direct.h  min_driver_bootstrap.cheng  min_driver_manifest.cheng  pure_cheng_contract.cheng  pure_cheng_manifest.cheng  rv64_emit.h  selfhost_entry.cheng  stage0_compiler.cheng  stage0_compiler.md  stage1_bootstrap.cheng  x64_emit.h
cheng_uir_bridge_bootstrap/: Cargo.toml  README.md
cheng_uir_bridge_bootstrap/src/: lib.rs
codex/: README.md  plan.md
configs/: cheng-pkg-config.toml  hrt_runtime_constraints.env  srt_runtime_constraints.env
docs/: .cheng-formal-spec.md.swp  PLAN.md  UIR.md  ai-native-gui-execution-semantics.md  backend-dot-lowering-contract.md  backend-driver-cli.md  backend-mem-hotpatch-contract.md  backend-prod-oncall.md  backend-string-abi-contract.md  backend-techdebt-matrix.md  c_seed_audit.md  cfg-verification.md  (+55 more)
rustc_codegen_uir/: Cargo.toml  README.md
rustc_codegen_uir/src/: ffi.rs  lib.rs  manifest.rs  mir_lowering.rs  rustc_backend.rs
(+3887 files in other folders)
