[package]
name = "cheng_uir_bridge_bootstrap"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Bootstrap Cheng UIR bridge dylib for rustc_codegen_uir strict mode"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
object = { version = "0.37", features = ["write"] }
