[package]
name = "rustc_codegen_uir"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Bootstrap Rust -> Cheng UIR codegen backend bridge"

[lib]
path = "src/lib.rs"
crate-type = ["dylib"]

[features]
default = []
rustc-backend = []

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
libloading = "0.8"

[profile.dev]
debug = 0
incremental = false
split-debuginfo = "off"

[profile.test]
debug = 0
incremental = false
split-debuginfo = "off"
